Bug 128587 : Fix a typo in uScanDecomposedHangulCommon() to make EUC-KR/ISO-2022-KR decoders work correctly with 8byte-seq. representation of Hangul syllables. r=yokoyama, sr=alecf, a=scc